<resources>
    <string name="app_name" translatable="false">UniversCity</string>
    <string name="action_settings">Settings</string>

    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label" translatable="false">First Fragment</string>
    <string name="second_fragment_label" translatable="false">Second Fragment</string>
    <string name="third_fragment_label" translatable="false">Third Fragment</string>
    <string name="fourth_fragment_label" translatable="false">Fourth Fragment</string>
    <string name="menu_fragment_label" translatable="false">Menu Fragment</string>
    <string name="info_fragment_label" translatable="false">Information Fragment</string>

    <!-- Buttons -->
    <string name="back_to_menu">Back to the menu</string>

    <!-- Country Fragment -->
    <string name="capital_text">Capital:</string>
    <string name="population_text">Population:</string>
    <string name="area_text">Area:</string>
    <string name="universities_list">UniversitiesList</string>
    <string name="continent_text">Continent:</string>
    <string name="borders_text">Border countries:</string>
    <string name="currencies_text">Currencies:</string>
    <string name="language_text">Languages:</string>
    <string name="NoBorders">There is no border country.</string>
    <string name="NoCapital">There is no capital.</string>
    <string name="NoLanguages">There is no languages.</string>

    <!-- University Fragment-->
    <string name="ErrorApi">An error occurred on the api side, please try again or go to the api website to see the universities.</string>
    <string name="number_of_university">We have found</string>
    <string name="number_of_university2"> universities for this country.</string>

    <!-- Preference Titles -->
    <string name="title_activity_settings">Application settings</string>
    <string name="location_header">Location</string>
    <string name="language_header">Language</string>
    <string name="themes_header">Style</string>
    <string name="user_header">Name</string>

    <!-- User Preferences -->
    <string name="user_name">My username</string>

    <!-- Location Preferences -->
    <string name="location_region">My continent</string>
    <string name="location_country">Country\'s name</string>

    <!-- Language Preferences -->
    <string name="language_title">Language studied</string>
    <string name="language_app">Application language</string>

    <!-- Theme Preferences -->
    <string name="theme_title">Application style</string>
    <string name="greenStyle">Green style</string>
    <string name="purpleStyle">Red style</string>

    <!-- Menu -->
    <string name="welcome">Welcome to this application,</string>
    <string name="all_regions">All continents</string>
    <string name="my_country">My country</string>
    <string name="my_language_s_countries">Country of the language studied</string>
    <string name="application_s_information">Application\'s information</string>
    <string name="my_region">My continent</string>

    <!-- Languages -->
    <string name="French">French</string>
    <string name="English">English</string>
    <string name="Deutsch">Deutsch</string>

    <!--Names of continents-->
    <string name="Africa">Africa</string>
    <string name="Americas">Americas</string>
    <string name="Asia">Asia</string>
    <string name="Europe">Europe</string>
    <string name="Oceania">Oceania</string>
    <string name="Polar">Polar</string>

    <!-- Notifications -->
    <string name="Notification">Notification</string>
    <string name="tryNotification">To see notifications, wait until 10:30 or 15:00.</string>
    <string name="pop_messages">Pop Message</string>
    <string name="tryPopMessages">To see pop-up messages, disable wifi and look at a country or region you haven\'t seen yet.</string>
    <string name="enableWifi">Please activate your phone\'s wifi to access the information.</string>

    <!-- Information fragment -->
    <string name="name_app_text">Name of the application: UniversCity</string>
    <string name="author_app_text">Creator: Angélique P.</string>
    <string name="date_app_text">Date of the last version: 23/05/2021</string>
    <string name="version_app_text">Version: 1.0</string>
    <string name="objective_app_text">Objective of the application: \"To help students find universities all over the world.</string>
    <string name="languages_app_text">Supported languages: English, French and German.</string>
    <string name="github_app_text">Link to the github:</string>
    <string name="github_app_link" translatable="false">https://github.com/angelique2000/Esiea3ATDProgrammationMobile</string>
    <string name="api_country_app_text">Link to the countries api</string>
    <string name="api_country_app_link" translatable="false">https://restcountries.eu/</string>
    <string name="api_university_app_text">Link to the universities api</string>
    <string name="api_university_app_link" translatable="false">https://github.com/Hipo/university-domains-list</string>
    <string name="github_app_click">Click here</string>
    <string name="logo" translatable="false">Application\'s image</string>

</resources>