<PreferenceScreen
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory
        app:icon="@drawable/ic_baseline_person_24"
        app:title="@string/user_header">

        <EditTextPreference
            app:defaultValue="UserName"
            app:key="username"
            app:title="@string/user_name"
            app:useSimpleSummaryProvider="true" />
    </PreferenceCategory>


    <PreferenceCategory
        app:icon="@drawable/ic_baseline_landscape_24"
        app:title="@string/location_header">

        <ListPreference
            app:defaultValue="Europe"
            app:entries="@array/continents_entries"
            app:entryValues="@array/continents_values"
            app:key="region"
            app:title="@string/location_region"
            app:useSimpleSummaryProvider="true" />

        <ListPreference
            app:defaultValue="France"
            app:key="country"
            app:title="@string/location_country"
            app:entries="@array/countries_entries"
            app:entryValues="@array/countries_values"
            app:useSimpleSummaryProvider="true" />

    </PreferenceCategory>

    <PreferenceCategory
        app:icon="@drawable/ic_baseline_language_24"
        app:title="@string/language_header">

        <ListPreference
            app:key="my_language"
            app:defaultValue="fr"
            app:title="@string/language_title"
            app:entries="@array/language_titles"
            app:entryValues="@array/language_values"
            app:useSimpleSummaryProvider="true" />

        <ListPreference
            app:defaultValue="fr"
            app:entries="@array/language_app_titles"
            app:entryValues="@array/language_app_values"
            app:key="app_language"
            app:title="@string/language_app"
            app:useSimpleSummaryProvider="true" />

    </PreferenceCategory>

    <PreferenceCategory
        app:icon="@drawable/ic_baseline_brightness_medium_24"
        app:title="@string/themes_header">

        <ListPreference
            app:defaultValue="BRIGHT"
            app:entries="@array/theme_entries"
            app:entryValues="@array/theme_values"
            app:key="theme_choice"
            app:title="@string/theme_title"
            app:useSimpleSummaryProvider="true"/>
    </PreferenceCategory>

</PreferenceScreen>