<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <!-- Image -->
    <ImageView
        android:id="@+id/imageApp"
        android:layout_width="185dp"
        android:layout_height="185dp"
        android:contentDescription="@string/logo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/ic_launcher_foreground" />

    <!-- Text -->

    <TextView
        android:id="@+id/authorApp"
        android:layout_width="278dp"
        android:layout_height="22dp"
        android:fontFamily="serif"
        android:text="@string/author_app_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.481"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.324" />

    <TextView
        android:id="@+id/objectiveApp"
        android:layout_width="278dp"
        android:layout_height="54dp"
        android:layout_marginTop="19dp"
        android:fontFamily="serif"
        android:text="@string/objective_app_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.481"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/versionApp"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/apiLinkApp"
        android:layout_width="wrap_content"
        android:layout_height="22dp"
        android:fontFamily="serif"
        android:text="@string/api_country_app_text"
        android:textColor="?attr/colorPrimary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.489"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/languagesApp"
        app:layout_constraintVertical_bias="0.071" />

    <TextView
        android:id="@+id/nameApp"
        android:layout_width="278dp"
        android:layout_height="22dp"
        android:fontFamily="serif"
        android:text="@string/name_app_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.481"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.265" />

    <TextView
        android:id="@+id/versionApp"
        android:layout_width="278dp"
        android:layout_height="22dp"
        android:fontFamily="serif"
        android:text="@string/version_app_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.481"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dateApp"
        app:layout_constraintVertical_bias="0.053" />

    <TextView
        android:id="@+id/languagesApp"
        android:layout_width="278dp"
        android:layout_height="36dp"
        android:layout_marginTop="20dp"
        android:fontFamily="serif"
        android:text="@string/languages_app_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.481"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/objectiveApp"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/api2LinkApp"
        android:layout_width="wrap_content"
        android:layout_height="22dp"
        android:fontFamily="serif"
        android:text="@string/api_university_app_text"
        android:textColor="?attr/colorPrimary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/apiLinkApp"
        app:layout_constraintVertical_bias="0.084" />

    <TextView
        android:id="@+id/githubLinkApp"
        android:layout_width="wrap_content"
        android:layout_height="21dp"
        android:fontFamily="serif"
        android:text="@string/github_app_click"
        android:textColor="?attr/colorPrimary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.191"
        app:layout_constraintStart_toEndOf="@+id/githubApp"
        app:layout_constraintTop_toBottomOf="@+id/api2LinkApp"
        app:layout_constraintVertical_bias="0.147" />

    <TextView
        android:id="@+id/githubApp"
        android:layout_width="wrap_content"
        android:layout_height="20dp"
        android:fontFamily="serif"
        android:text="@string/github_app_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/githubLinkApp"
        app:layout_constraintHorizontal_bias="0.334"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/api2LinkApp"
        app:layout_constraintVertical_bias="0.146" />

    <TextView
        android:id="@+id/dateApp"
        android:layout_width="278dp"
        android:layout_height="22dp"
        android:fontFamily="serif"
        android:text="@string/date_app_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.481"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.385" />

    <!-- Button -->

    <ImageButton
        android:id="@+id/imageButtonApp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="?attr/colorSecondaryVariant"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.918"
        app:srcCompat="@drawable/abc_vector_test" />

</androidx.constraintlayout.widget.ConstraintLayout>