<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/MenuFragment">

    <fragment
        android:id="@+id/MenuFragment"
        android:name="com.example.esiea3atd1.MenuFragment"
        android:label="@string/menu_fragment_label"
        tools:layout="@layout/fragment_menu">

        <action
            android:id="@+id/NavigateToRegionList0"
            app:destination="@id/RegionListFragment" />
        <action
            android:id="@+id/NavigateToMyRegion"
            app:destination="@id/CountriesFragment" />
        <action
            android:id="@+id/NavigateToMyCountry"
            app:destination="@id/DetailCountryFragment" />
        <action
            android:id="@+id/NavigateToInformation"
            app:destination="@id/InformationFragment" />
    </fragment>

    <fragment
        android:id="@+id/RegionListFragment"
        android:name="com.example.esiea3atd1.presentation.list.RegionListFragment"
        android:label="@string/first_fragment_label"
        tools:layout="@layout/fragment_region_list">

        <action
            android:id="@+id/NavigateToCountriesList"
            app:destination="@id/CountriesFragment" />
    </fragment>
    <fragment
        android:id="@+id/CountriesFragment"
        android:name="com.example.esiea3atd1.presentation.list.CountriesListFragment"
        android:label="@string/second_fragment_label"
        tools:layout="@layout/fragment_country_list">

        <argument
            android:name="regionName"
            app:argType="string"
            android:defaultValue="-1" />

        <action
            android:id="@+id/NavigateToCountryDetail"
            app:destination="@id/DetailCountryFragment" />
    </fragment>

    <fragment
        android:id="@+id/DetailCountryFragment"
        android:name="com.example.esiea3atd1.presentation.detail.CountryDetailFragment"
        android:label="@string/third_fragment_label"
        tools:layout="@layout/fragment_country_detail">

        <argument
            android:name="countryName"
            app:argType="string"
            android:defaultValue="-1" />

        <action
            android:id="@+id/NavigateToMenu"
            app:destination="@id/MenuFragment" />
        <action
            android:id="@+id/NavigateToUniversitiesList"
            app:destination="@+id/UnivertiesFragment" />
    </fragment>

    <fragment
        android:id="@+id/UnivertiesFragment"
        android:name="com.example.esiea3atd1.presentation.list.UniversitiesListFragment"
        android:label="@string/fourth_fragment_label"
        tools:layout="@layout/fragment_university_list">

        <argument
            android:name="countryNameForUni"
            app:argType="string"
            android:defaultValue="-1" />

        <action
            android:id="@+id/NavigateToRegionList2"
            app:destination="@id/RegionListFragment" />
    </fragment>

    <fragment
        android:id="@+id/InformationFragment"
        android:name="com.example.esiea3atd1.InformationFragment"
        android:label="@string/info_fragment_label"
        tools:layout="@layout/fragment_information">

    <action
        android:id="@+id/NavigateToMenu0"
        app:destination="@id/MenuFragment" />
    </fragment>

</navigation>