<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.detail.CountryDetailFragment">

    <ImageView
        android:id="@+id/country_detail_flag"
        android:layout_width="150dp"
        android:layout_height="100dp"
        android:contentDescription="Country flag"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.018" />

    <TextView
        android:id="@+id/country_detail_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="26sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/country_detail_capital_comment"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.648"
        tools:text="CountryName" />

    <TextView
        android:id="@+id/country_detail_capital_comment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/capital_text"
        app:layout_constraintBottom_toTopOf="@id/universities_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.187"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.498" />

    <TextView
        android:id="@+id/country_detail_capital_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        app:layout_constraintBottom_toTopOf="@id/universities_button"
        app:layout_constraintStart_toEndOf="@id/country_detail_capital_comment"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.496"
        tools:text="CountryCapital" />

    <TextView
        android:id="@+id/country_detail_population_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        app:layout_constraintBottom_toTopOf="@id/universities_button"
        app:layout_constraintStart_toEndOf="@id/country_detail_population_comment"
        app:layout_constraintTop_toTopOf="@id/country_detail_name"
        app:layout_constraintVertical_bias="0.407"
        tools:text="CountryPopulation" />

    <TextView
        android:id="@+id/country_detail_population_comment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/population_text"
        app:layout_constraintBottom_toTopOf="@id/universities_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.201"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/country_detail_name"
        app:layout_constraintVertical_bias="0.41" />


    <TextView
        android:id="@+id/country_detail_area_comment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/area_text"
        app:layout_constraintBottom_toTopOf="@id/universities_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.181"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/country_detail_population_comment"
        app:layout_constraintVertical_bias="0.158" />

    <TextView
        android:id="@+id/country_detail_area_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        app:layout_constraintBottom_toTopOf="@id/universities_button"
        app:layout_constraintStart_toEndOf="@id/country_detail_area_comment"
        app:layout_constraintTop_toTopOf="@id/country_detail_population_text"
        app:layout_constraintVertical_bias="0.162"
        tools:text="CountryArea" />

    <TextView
        android:id="@+id/country_detail_continent_comment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/continent_text"
        app:layout_constraintBottom_toTopOf="@id/universities_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.193"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/country_detail_population_comment"
        app:layout_constraintVertical_bias="0.336" />

    <TextView
        android:id="@+id/country_detail_borders_text"
        android:layout_width="165dp"
        android:layout_height="82dp"
        android:layout_marginStart="12dp"
        app:layout_constraintBottom_toTopOf="@id/universities_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.054"
        app:layout_constraintStart_toEndOf="@+id/country_detail_borders_comment"
        app:layout_constraintTop_toTopOf="@id/country_detail_population_text"
        app:layout_constraintVertical_bias="0.735"
        tools:text="CountryBorders" />

    <TextView
        android:id="@+id/country_detail_continent_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        app:layout_constraintBottom_toTopOf="@id/universities_button"
        app:layout_constraintStart_toEndOf="@+id/country_detail_continent_comment"
        app:layout_constraintTop_toTopOf="@id/country_detail_population_text"
        app:layout_constraintVertical_bias="0.339"
        tools:text="CountryContinent" />

    <TextView
        android:id="@+id/country_detail_borders_comment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/borders_text"
        app:layout_constraintBottom_toTopOf="@id/universities_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.226"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/country_detail_population_comment"
        app:layout_constraintVertical_bias="0.504" />

    <Button
        android:id="@+id/universities_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/universities_list"
        app:layout_constraintBottom_toBottomOf="@id/button_second"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/country_detail_name"
        app:layout_constraintVertical_bias="0.74" />

    <Button
        android:id="@+id/button_second"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/previous"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/country_detail_name"
        app:layout_constraintVertical_bias="0.848" />

</androidx.constraintlayout.widget.ConstraintLayout>